packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/wld-001-no-world.ttrp
// expect: TTRP-WLD-001
// no-world
container c target polars { }
